crates/aura-macros/tests/boundaries/semantic_owner_await_before_handoff.stderr
error: semantic_owner awaits before canonical handoff_to_app_workflow
  --> tests/boundaries/semantic_owner_await_before_handoff.rs:37:5
   |
37 |     preflight().await;
   |     ^^^^^^^^^
